--- a/core/src/main/res/layout/include_list.xml
+++ b/core/src/main/res/layout/include_list.xml
@@ -7,7 +7,9 @@
     <FrameLayout
 
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+
+        >
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_news_list"
