--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="text_color_dark">#de000000</color>
     <color name="list_divider_light">#ffe0e0e0</color>
     <color name="tran_all">#00000000</color>
+    <color name="tran_half">#55000000</color>
     <color name="list_divider_dark">#ff666666</color>
     <color name="selectable_item_background_general_light_normal">@android:color/white</color>
     <color name="selectable_item_background_general_light_pressed">#ffeeeeee</color>
