--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -89,7 +89,18 @@
                 android:gravity="center_vertical|right"
                 android:padding="10dp" />
         </LinearLayout>
-
+        <TextView
+            android:id="@+id/tv_clear"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_40dp"
+            android:layout_marginTop="@dimen/space_10dp"
+            android:background="@color/white"
+            android:drawableRight="@mipmap/ic_toright"
+            android:gravity="center_vertical"
+            android:padding="@dimen/space_10dp"
+            android:text="清除缓存"
+            android:textColor="@color/txt_black"
+            android:textSize="@dimen/text_14sp" />
         <TextView
             android:id="@+id/tv_about"
             android:layout_width="match_parent"
