--- a/app/src/main/res/layout/zhibo_group_item.xml
+++ b/app/src/main/res/layout/zhibo_group_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_80"
+    android:layout_height="@dimen/dp_100"
     >
 
-    <ImageView
+
+    <com.eaphone.g08android.widget.RoundImageView
         android:id="@+id/iv_group_item"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_80"
         android:layout_marginLeft="@dimen/dp_25"
         android:layout_marginRight="@dimen/dp_25"
         android:layout_marginTop="@dimen/dp_15"
+        android:scaleType="fitXY"
         />
 </LinearLayout>
