--- a/app/src/main/res/layout/activity_heath_zhibo_detail.xml
+++ b/app/src/main/res/layout/activity_heath_zhibo_detail.xml
@@ -8,6 +8,7 @@
         android:id="@+id/music_progress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:max="100" />
     <include layout="@layout/include_list"/>
 
