--- a/app/src/main/res/layout/activity_heath_group_detail.xml
+++ b/app/src/main/res/layout/activity_heath_group_detail.xml
@@ -5,6 +5,26 @@
 
     <include layout="@layout/include_titlebar" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="不同人群有不同的免费专家课程，在线回答与使用材料呦~"
+        android:textSize="@dimen/sp_13"
+        android:textColor="@color/white"
+        android:gravity="center_vertical|center_horizontal"
+        android:background="@color/tran_half"
+        android:layout_marginTop="@dimen/dp_12"
+        android:layout_marginBottom="@dimen/dp_12"
+        />
+    <TextView
+        android:id="@+id/tv_group_detail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="我是......"
+        android:textSize="@dimen/sp_16"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginBottom="@dimen/dp_12"
+        />
     <include layout="@layout/include_list"/>
 
 </LinearLayout>
