--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -12,5 +12,14 @@
     <WebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
+        android:clickable="false"
+        android:focusable="false"
+        android:visibility="gone"
         android:layout_height="match_parent"/>
+
+    <ImageView
+        android:id="@+id/iv_web"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 </LinearLayout>
